Basic functionality achieved

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -23,8 +23,8 @@
 
       <div class="rooms">
         <select class="roomsList">
-          <option selected="selected">Select All</option>
-          <option>New Room</option>
+          <option class="default" selected="selected">Select All</option>
+          <option class="default">New Room</option>
         </select>
       </div>
 
